# roscon-es-2024-tiago-workshop

./: README.md  roscon-es-2024-tiago-workshop.repos
create_your_motion/: package.xml  setup.cfg  setup.py
create_your_motion/create_your_motion/: load_motions_file.py
create_your_motion/launch/: create_your_motion.launch.py
